changed some address

--- a/contacts.html
+++ b/contacts.html
@@ -28,7 +28,8 @@ h2{
     <div class="container col-md-5">
         <h2 class="text-center">For any Queries Contact Us</h2>
         <form id="reviewForm"  action="https://api.web3forms.com/submit" method="POST">
-            <input type="hidden" name="access_key" value="ddd25bbe-2a78-4761-a95a-874db2e5d374">
+            <input type="hidden" name="access_key" value="your api key">
+            <!-- in web3forms.com website you can generate your api key-->
             <div class="mb-3">
                 
                 <label for="email" class="form-label">Email address</label>
